tests/NormalTests/paczka1/small_fuzzy/38847420.err
Error in line 1: N5ATVyCB A653 23,0
Error in line 3: Qb4b0 S517 2,4
Error in line 10: HvCLjUe3 A653 57,6
